--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
 		"@wordpress/scripts": "^12.1.1"
 	},
 	"dependencies": {
-		"@wordpress/icons": "^2.4.0",
-		"ucla-bruin-components": "git+https://avelikanov@bitbucket.org/uclaucomm/ucla-bruin-components.git"
+		"@wordpress/icons": "^2.4.0"
 	}
 }
