--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
 	},
 	"dependencies": {
 		"@wordpress/icons": "^2.4.0",
-		"ucla-bruin-components": "git+ssh://git@bitbucket.org/uclaucomm/ucla-bruin-components.git#main"
+		"ucla-bruin-components": "https://bitbucket.org/uclaucomm/ucla-bruin-components.git#main"
 	}
 }
