carousel import problems

--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
 	"dependencies": {
 		"@wordpress/icons": "^2.4.0",
 		"react-image-gallery": "^1.2.7",
-		"ucla-bruin-components": "https://bitbucket.org/uclaucomm/ucla-bruin-component-library.git#campus"
+		"ucla-bruin-components": "https://bitbucket.org/uclaucomm/ucla-bruin-components.git#main"
 	}
 }
