--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 		"@wordpress/scripts": "^12.1.1"
 	},
 	"dependencies": {
+		"@splidejs/splide": "^3.6.12",
 		"@wordpress/icons": "^2.4.0",
-		"react-image-gallery": "^1.2.7",
 		"ucla-bruin-components": "https://bitbucket.org/uclaucomm/ucla-bruin-components.git#main"
 	}
 }
