--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 		"packages-update": "wp-scripts packages-update"
 	},
 	"devDependencies": {
+		"@splidejs/react-splide": "^0.6.20",
 		"@wordpress/scripts": "^12.1.1"
 	},
 	"dependencies": {
+		"@splidejs/splide": "^3.6.12",
 		"@wordpress/icons": "^2.4.0",
 		"ucla-bruin-components": "https://bitbucket.org/uclaucomm/ucla-bruin-components.git#main"
 	}
